# autowork-ai

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  vercel.json
apps/pipeline/: .env.example  check_credentials.py  pyproject.toml
apps/pipeline/migrations/: 2026-04-23-add-video-rendering-support.sql  2026-04-23-replace-tistory-columns-with-wordpress.sql
apps/pipeline/src/: __init__.py  config.py  main.py
apps/pipeline/src/affiliate/: __init__.py  link_inserter.py
apps/pipeline/src/api/: __init__.py  routes.py
apps/pipeline/src/connectors/: __init__.py  claude.py  coupang.py  instagram.py  naver.py  tistory.py  wordpress.py  youtube.py
apps/pipeline/src/content/: __init__.py  blog_generator.py  reels_generator.py  youtube_generator.py
apps/pipeline/src/models/: __init__.py  content.py
apps/pipeline/src/monitoring/: __init__.py  pipeline_monitor.py  pipeline_runner.py  scheduler.py  slack_notifier.py
apps/pipeline/src/scheduler/: __init__.py  pipeline_scheduler.py
apps/pipeline/src/trend/: __init__.py  content_queue.py  topic_selector.py  trend_collector.py
apps/pipeline/src/upload/: __init__.py  instagram_uploader.py  tistory_uploader.py  wordpress_uploader.py  youtube_uploader.py
apps/pipeline/src/utils/: __init__.py  db.py  logging.py
apps/pipeline/src/video/: __init__.py  slide_generator.py  tts_generator.py  video_pipeline.py  video_synthesizer.py
apps/pipeline/tests/: conftest.py  test_e2e_pipeline.py
apps/pipeline/tests/affiliate/: test_link_inserter.py
apps/pipeline/tests/content/: test_blog_generator.py  (+2 more)
(+37 files in other folders)
